--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
 	"name": "news-website",
 	"private": true,
 	"version": "0.0.0",
+	"homepage": "https://artemgarbach99.github.io/gallery-website/",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "tsc -b && vite build",
+		"build": "tsc && vite build",
 		"lint": "eslint .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.5.0",
@@ -32,6 +34,7 @@
 		"eslint": "^9.17.0",
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.16",
+		"gh-pages": "^6.3.0",
 		"globals": "^15.14.0",
 		"prettier": "^3.4.2",
 		"typescript": "~5.6.2",
