--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"build": "tsc && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
-		"deploy": "gh-pages -d dist"
+		"deploy": "npm run build && gh-pages -d dist"
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.5.0",
